Add activity name filter dropdown to activities list UI

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,13 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
+        <div class="filter-group">
+          <label for="activity-filter">Filter by Activity Name:</label>
+          <select id="activity-filter">
+            <option value="">-- All Activities --</option>
+            <!-- Filter options will be loaded here -->
+          </select>
+        </div>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
